--- a/src/fr/main/display/FrameComponent.form
+++ b/src/fr/main/display/FrameComponent.form
@@ -3,21 +3,23 @@
   <grid id="27dc6" binding="panelMain" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="5" left="5" bottom="5" right="5"/>
     <constraints>
-      <xy x="20" y="20" width="712" height="659"/>
+      <xy x="20" y="20" width="1014" height="659"/>
     </constraints>
     <properties>
       <foreground color="-12828863"/>
     </properties>
     <border type="none"/>
     <children>
-      <scrollpane id="58b2a">
+      <scrollpane id="58b2a" binding="scrollPane1">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="2" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="1000" height="600"/>
           </grid>
         </constraints>
         <properties>
           <foreground color="-12828863"/>
+          <verticalScrollBarPolicy value="22"/>
+          <visible value="true"/>
         </properties>
         <border type="none"/>
         <children>
