--- a/src/fr/main/display/FrameComponent.form
+++ b/src/fr/main/display/FrameComponent.form
@@ -1,50 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="fr.main.display.FrameComponent">
-  <grid id="27dc6" binding="panelMain" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="5" left="5" bottom="5" right="5"/>
+  <grid id="27dc6" binding="panelMain" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="1" left="1" bottom="1" right="1"/>
     <constraints>
-      <xy x="20" y="20" width="1014" height="659"/>
+      <xy x="25" y="6" width="1030" height="687"/>
     </constraints>
     <properties>
       <foreground color="-12828863"/>
     </properties>
     <border type="none"/>
     <children>
-      <scrollpane id="58b2a" binding="scrollPane1">
+      <grid id="a843" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="2" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="1000" height="600"/>
-          </grid>
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties>
-          <foreground color="-12828863"/>
-          <verticalScrollBarPolicy value="22"/>
-          <visible value="true"/>
-        </properties>
+        <properties/>
         <border type="none"/>
         <children>
-          <component id="bf402" class="javax.swing.JTable" binding="table1" custom-create="true" default-binding="true">
-            <constraints/>
+          <scrollpane id="58b2a" binding="scrollPane1">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <minimum-size width="1000" height="600"/>
+                <maximum-size width="4000" height="4000"/>
+              </grid>
+            </constraints>
             <properties>
               <foreground color="-12828863"/>
-              <selectionForeground color="-12828922"/>
+              <verticalScrollBarPolicy value="22"/>
+              <visible value="true"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="bf402" class="javax.swing.JTable" binding="table1" custom-create="true" default-binding="true">
+                <constraints/>
+                <properties>
+                  <foreground color="-12828863"/>
+                  <selectionForeground color="-12828922"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
+          <component id="90d0e" class="javax.swing.JButton" binding="button1" default-binding="true">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Exit"/>
             </properties>
           </component>
+          <hspacer id="265dc">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
         </children>
-      </scrollpane>
-      <hspacer id="2c6ca">
-        <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </hspacer>
-      <component id="90d0e" class="javax.swing.JButton" binding="button1" default-binding="true">
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Exit"/>
-        </properties>
-      </component>
+      </grid>
     </children>
   </grid>
 </form>
