--- a/src/fr/main/display/FrameComponent.form
+++ b/src/fr/main/display/FrameComponent.form
@@ -46,6 +46,8 @@
               <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <focusable value="false"/>
+              <opaque value="true"/>
               <text value="Exit"/>
             </properties>
           </component>
@@ -54,6 +56,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <focusable value="false"/>
               <text value="Toggle auto-scroll"/>
             </properties>
           </component>
@@ -67,7 +70,13 @@
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Toggle sniffer"/>
+              <actionCommand value="Toggle sniffer"/>
+              <focusable value="false"/>
+              <hideActionText value="false"/>
+              <label value="Stop sniffer"/>
+              <opaque value="true"/>
+              <selected value="true"/>
+              <text value="Stop sniffer"/>
             </properties>
           </component>
           <component id="b2b28" class="javax.swing.JButton" binding="removeAllButton" default-binding="true">
@@ -75,6 +84,7 @@
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <focusable value="false"/>
               <text value="Remove all"/>
             </properties>
           </component>
